Fixed spinning text appearing below screen on Safari iOS iPhone 7

--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -68,7 +68,7 @@ canvas {
 }
 .game-overlay .button-section {
     position: absolute;
-    bottom: 15vh;
+    bottom: 24vh;
     width: 100%;
     text-align: center;
 }
